correction align-text of body

--- a/css/creative.css
+++ b/css/creative.css
@@ -8379,9 +8379,6 @@ button.bg-dark:focus {
         margin: 0;
         padding: 0;
   }
-/*  header.masthead {
-    background: url("../img/background.mobile.png")!important;
-
 }
 
 .fixed-top {
